--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
 </head>
 <body>
-<h1>TaylorSwify</h1>
+<h1>Jogo da velha</h1> 
     <script src="js/script.js"></script>
     <script src="js/main.js"></script>
 </body>
