apagando pq deu erro

--- a/index.html
+++ b/index.html
@@ -12,12 +12,7 @@
     <title>Jogo da velha</title>
     
 </head>
-<body onload=inicia()>
-    <div id='board'></div><br />
-    Linha :.<input id="lin" type="number" min="1" max="2"> <br />
-    Coluna:<input id="col" type="number"min="1" max="2"> <br />
-    <button onclick="jogar()">Marcar</button><br />
-    <div id='aviso'></div><br />
+<body>
     <script src="js/script.js"></script>
     <script src="js/main.js"></script>
 </body>
