--- a/index.html
+++ b/index.html
@@ -13,6 +13,20 @@
     
 </head>
 <body>
+    <main>
+<h1>Jogo da velha da Mari</h1>
+<div class="velha">
+<button data-{="1"}></button>
+<button data-{="2"}></button>
+<button data-{="3"}></button>
+<button data-{="4"}></button>
+<button data-{="5"}></button>
+<button data-{="6"}></button>
+<button data-{="7"}></button>
+<button data-{="8"}></button>
+<button data-{="9"}></button>
+</div>
+    </main>
     <script src="js/script.js"></script>
     <script src="js/main.js"></script>
 </body>
