--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 <button data-{="8"}></button>
 <button data-{="9"}></button>
 </div>
+<h1 class="currentPlayer"></h1>
     </main>
     <script src="js/script.js"></script>
     <script src="js/main.js"></script>
