--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
 </head>
 <body>
     <main>
-<h1>Jogo da velha da Mari</h1>
-<hr />
-<div class="velha">
-<button data-i="1"></button>
-<button data-i="2"></button>
-<button data-i="3"></button>
-<button data-i="4"></button>
-<button data-i="5"></button>
-<button data-i="6"></button>
-<button data-i="7"></button>
-<button data-i="8"></button>
-<button data-i="9"></button>
-</div>
-<h1 class="currentPlayer"></h1>
-    </main>
+        <h1>JOGO DA VELHA</h1>
+        <hr />
+        <div class="velha">
+          <button data-i="1"></button>
+          <button data-i="2"></button>
+          <button data-i="3"></button>
+          <button data-i="4"></button>
+          <button data-i="5"></button>
+          <button data-i="6"></button>
+          <button data-i="7"></button>
+          <button data-i="8"></button>
+          <button data-i="9"></button>
+        </div>
+        <h2 class="currentJogadores"></h2>
+      </main>
     <script src="js/script.js"></script>
     <script src="js/main.js"></script>
 </body>
