--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <main>
-        <h1>JOGO DA VELHA</h1>
+        <h1>JOGO DA VELHA DA MARI</h1>
         <hr />
         <div class="velha">
           <button data-i="1"></button>
